Register exec added to pom

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,21 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>RegisterTest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <configuration>
+                            <mainClass>com.HTTPHandler.server.TestClients.RegisterClientTest</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
 </project>
